refactoring in swagger
